# amazon-sagemaker-personalized-generative-ai

./: .gitignore  CONTRIBUTING.md  README.md  app.py  cdk.json  pyproject.toml
.infrastructure/: attp-bootstrap.cfn.yaml
documentation/: api.json
finetuning/deepspeed/: launcher.py  qa-deepspeed-s5cmd.ipynb  requirements.txt
finetuning/deepspeed/scripts/: qa-deepspeed-s5cmd.py  qa-deepspeed.py
finetuning/peft/: qa-peft-hyperparameter-tuning.ipynb  qa-peft-s5cmd.ipynb  qa-peft-smp.ipynb  requirements.txt
finetuning/peft/scripts/: qa-peft-s5cmd.py  qa-peft-smp.py  qa-peft.py
finetuning/smp/: qa-smp-new.ipynb  qa-smp-single-gpu.ipynb  requirements.txt
finetuning/smp/scripts/: qa-smp-tp.py  qa-smp.py  utils.py
genai_personalized/: genai_personalized_stack.py
lambdas/http_request_lambdas/: check_model_state.py  custom_encoder.py  invoke_endpoint_for_inference.py  start_sfn_workflow.py
lambdas/launch_fine_tune_job/: index.py
lambdas/model_artifact_preparation/: untar_file.py  upload_model_code.py
tests/unit/: test_genai_personalized_stack.py
